# wharfkit-godot

./: .env.example  .gitignore  BUILD.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
addons/wharfkit/: README.md  plugin.cfg  wharfkit.gdextension  wharfkit_login_pending.gd  wharfkit_pending.gd  wharfkit_session.gd  wharfkit_session_kit.gd  wharfkit_transact_pending.gd
addons/wharfkit_renderer/: README.md  plugin.cfg  wharfkit_renderer.gd
addons/wharfkit_renderer/scenes/: _button_element.gd  element_accept.gd  element_accept.tscn  element_button.gd  element_button.tscn  element_close.gd  element_close.tscn  element_countdown.gd  element_countdown.tscn  element_link.gd  element_link.tscn  element_qr.gd  element_qr.tscn  prompt_modal.gd  prompt_modal.tscn
addons/wharfkit_wallet_plugin_anchor/: README.md  plugin.cfg  wharfkit_wallet_plugin_anchor.gdextension
crates/wharfkit-godot-plugin-sdk/: Cargo.toml
crates/wharfkit-godot-plugin-sdk/src/: await_main.rs  dict.rs  error.rs  lib.rs  login_context.rs  prompt.rs  signal.rs  transact_context.rs
crates/wharfkit-godot-plugin-sdk/tests/: README.md  await_main.rs  dict.rs  error_from_wallet.rs  login_context_view.rs  prompt_element_builder.rs  prompt_response_kind.rs  signal.rs  transact_context_view.rs
example/: eosio_token.gd  eosio_token.gd.uid  export_presets.cfg  icon.svg.import  main.gd  main.gd.uid  main.tscn  project.godot
example/test_ui/: test_ui.gd  test_ui.gd.uid  test_ui.tscn
example/test_wallet/: test_wallet.gd  test_wallet.gd.uid
example/tests/: test_anchor.gd  test_anchor.gd.uid  test_anchor.tscn  test_chains.gd  test_chains.gd.uid  test_chains.tscn  test_core.gd  test_core.gd.uid  test_core.tscn  test_eosio_token.gd  test_eosio_token.gd.uid  test_eosio_token.tscn  test_renderer.gd  test_renderer.gd.uid  test_renderer.tscn  test_runner.gd  test_runner.gd.uid  test_session_kit.gd  test_session_kit.gd.uid  test_session_kit.tscn
scripts/: bootstrap.sh  ios-deploy.sh  release.sh  stage.sh
src/: base_classes.rs  godot_error.rs  godot_platform.rs  godot_storage.rs  lib.rs  plugin_dispatcher.rs  prompt_types.rs  qr_code.rs  runtime.rs
src/types/: asset.rs  chain_definition.rs  chains.rs  checksum.rs  contract.rs  contract_kit.rs  mod.rs  name.rs  symbol.rs  table.rs
