[package]
name = "wharfkit-godot"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Aaron Cox <aaron@greymass.com>"]
license = "AGPL-3.0-or-later"
description = "Godot 4 GDExtension addon for the WharfKit Antelope SDK"
homepage = "https://github.com/wharfkit/wharfkit-godot"
repository = "https://github.com/wharfkit/wharfkit-godot"
keywords = ["antelope", "wharfkit", "telos", "wax", "vaulta"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "wharfkit_godot"

[dependencies]
godot = "0.3"
antelope-client = "0.3.1"
wharfkit-common = "0.1.0"
wharfkit-abicache = "0.1.0"
wharfkit-contract = "0.1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }

[patch.crates-io]
antelope-client = { path = "../antelope-rs/crates/antelope" }
wharfkit-common = { path = "../wharfkit-rs/crates/wharfkit-common" }
wharfkit-abicache = { path = "../wharfkit-rs/crates/wharfkit-abicache" }
wharfkit-contract = { path = "../wharfkit-rs/crates/wharfkit-contract" }
