[package]
name = "wharfkit-godot-plugin-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Aaron Cox <aaron@greymass.com>"]
license = "AGPL-3.0-or-later"
description = "Typed View wrappers + builders for the WharfKit-Godot plugin contract. rlib only — contains no GodotClass registrations, safe to link into every plugin cdylib."
homepage = "https://github.com/wharfkit/wharfkit-godot"
repository = "https://github.com/wharfkit/wharfkit-godot"

[lib]
crate-type = ["rlib"]

[dependencies]
godot = "0.3"
