[package]
name = "wharfkit-godot-plugin-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Aaron Cox <aaron@greymass.com>"]
license = "MPL-2.0"
description = "Typed View wrappers + builders for the WharfKit-Godot plugin contract. rlib only — contains no GodotClass registrations, safe to link into every plugin cdylib."
homepage = "https://github.com/wharfkit/wharfkit-godot"
repository = "https://github.com/wharfkit/wharfkit-godot"

[lib]
crate-type = ["rlib"]

[features]
default = []
session = ["dep:wharfkit-session"]

[dependencies]
godot = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
wharfkit-session = { version = "0.1.0", optional = true }

[dev-dependencies]
futures-util = "0.3"
wharfkit-buoy-client = "0.1.0"
